--- a/angular/app/scss/foodie.css
+++ b/angular/app/scss/foodie.css
@@ -137,8 +137,10 @@ h1.fd-accent, h2.fd-accent, h3.fd-accent, h4.fd-accent, h5.fd-accent, h6.fd-acce
 .fd-delivery-info-title {
   outline: none; }
 
+.fd-form .fd-form-wrapper {
+  padding: 16px; }
+
 .fd-delivery-info-form {
-  padding: 8px;
   background-color: #F7F7F7; }
 
 a {
@@ -149,7 +151,9 @@ a {
   margin-bottom: 16px; }
 
 .fd-main-title .md-display-3 {
-  color: #00D4C9;
+  color: #00D4C9; }
+
+.fd-collapse-bottom {
   margin-bottom: 0; }
 
 md-toolbar.md-default-theme {
